@@ -1,25 +1,0 @@
-## Makefile for building the gthread DLL with gcc for mingw. The build
-## uses tools running on cygwin, however.
-
-## Use: make -f makefile.mingw
-
-TOP = ../..
-
-include ../build/win32/make.mingw
-
-################################################################
-
-INCLUDES = -I .. -I ../glib -I .
-DEFINES = -DHAVE_CONFIG_H -DG_LOG_DOMAIN=\"GThread\" -DG_ENABLE_DEBUG
-
-all : \
-	libgthread-2.0.a
-
-gthread_OBJECTS = \
-	gthread-impl.o
-
-libgthread-2.0.a : $(gthread_OBJECTS) gthread.def gthread-2.0.rc
-	$(BUILD_DLL) gthread-2.0 @LT_CURRENT@:@LT_REVISION@:@LT_AGE@ gthread.def $(gthread_OBJECTS) -L ../glib -lglib-2.0
-
-gthread-2.0.rc : gthread.rc
-	cp $< $@
